Add codeship badge to readme

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,6 @@
 = All-purpose Property List manipulation library
 
-{<img alt="Status?branch=master" src="https://codeship.com/projects/3b26f2d0-bf92-0132-7a19-3a4372b16de9/status?branch=master" />}[https://codeship.com/projects/73003]
+{<img alt="Build Status" src="https://drone.albertyw.com/api/badges/albertyw/plist/status.svg" />}[https://drone.albertyw.com/albertyw/plist]
 {<img src="https://codeclimate.com/github/albertyw/plist/badges/gpa.svg" />}[https://codeclimate.com/github/albertyw/plist]
 {<img src="https://codeclimate.com/github/albertyw/plist/badges/coverage.svg" />}[https://codeclimate.com/github/albertyw/plist/coverage]
 {<img src="https://gemnasium.com/albertyw/plist.svg" alt="Dependency Status" />}[https://gemnasium.com/albertyw/plist]
